@@ -3,6 +3,7 @@ Revision history for Perl extension AnyEvent.
 TODO: packagename for ae types
 
 	- AnyEvent::Handle: new options "keepalive" and "oobinline".
+        - oobinline set by default to avoid security issues.
 
 5.12 Tue Sep  1 20:26:50 CEST 2009
 	- be more lenient when parsing resolv.conf files, as some people
